<resources>
    <string name="app_name">MyCalculator</string>
    <string name="butSign">+/-</string>
    <string name="butDiv">&#247;</string>
    <string name="butMult">&#215;</string>
    <string name="butSub">&#8722;</string>
    <string name="but1">1</string>
    <string name="but2">2</string>
    <string name="but3">3</string>
    <string name="butSum">&#43;</string>
    <string name="but4">4</string>
    <string name="but5">5</string>
    <string name="but6">6</string>
    <string name="but7">7</string>
    <string name="but8">8</string>
    <string name="but9">9</string>
    <string name="butRes">=</string>
    <string name="but0">0</string>
    <string name="butPoint">.</string>
    <string name="butClear">C</string>
    <string name="butProcent">&#37;</string>
    <string name="butBack">&#9003;</string>
    <string name="_0">0</string>
    <string name="butSet">&#9913;</string>
    <string name="orange_theme">ORANGE</string>
    <string name="dark_theme">DARK</string>
    <string name="blue_theme">BLUE</string>
    <string name="select_theme_calculator">Select Theme Calculator</string>
    <string name="back">Back</string>
    <string name="default_theme">DEFAULT</string>
</resources>