<?xml version="1.0" encoding="utf-8"?>

<!--Для рисования калькулятора выбираю ConstrainLayout, т.к. это более гибкий и современный вид контейнера-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editText"
        style="@style/style_editText"
        android:layout_width="@dimen/widthEditText"
        android:layout_height="@dimen/heightTextView"
        android:layout_marginStart="@dimen/textViewMarginStart"
        android:layout_marginTop="@dimen/textViewMarginTop"
        android:layout_marginEnd="@dimen/textViewMarginEnd"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/btnSet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSet"
        style="@style/style_buttons"
        android:layout_width="@dimen/butSet_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/butSetMarginTop"
        android:layout_marginEnd="@dimen/butSetMarginEnd"
        android:text="@string/butSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSign"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/butSign"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiv"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/butDiv"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btnMult"
        app:layout_constraintStart_toEndOf="@id/btnSign"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMult"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/butMult"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintEnd_toStartOf="@id/btnSub"
        app:layout_constraintStart_toEndOf="@id/btnDiv"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSub"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butSub"
        app:layout_constraintBottom_toTopOf="@id/btnSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMult"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn1"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but1"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSign" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn2"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but2"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btnDiv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn3"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but3"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintEnd_toStartOf="@id/btnSum"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btnMult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSum"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butSum"
        app:layout_constraintBottom_toTopOf="@+id/btnProcent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btnSub" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn4"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but4"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn5"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but5"
        app:layout_constraintBottom_toTopOf="@id/btn8"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn6"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but6"
        app:layout_constraintBottom_toTopOf="@id/btn9"
        app:layout_constraintEnd_toStartOf="@id/btnSum"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnProcent"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/butProcent"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btnSum" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn7"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but7"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn8"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but8"
        app:layout_constraintBottom_toTopOf="@id/btnPoint"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btn5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn9"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/but9"
        app:layout_constraintBottom_toTopOf="@id/btnPoint"
        app:layout_constraintEnd_toStartOf="@+id/btnClear"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btn6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnClear"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butClear"
        app:layout_constraintBottom_toTopOf="@id/btnRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toBottomOf="@id/btnProcent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn0"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPoint"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPoint"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butPoint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@id/btn8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butBack"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRes"
        app:layout_constraintStart_toEndOf="@id/btnPoint"
        app:layout_constraintTop_toBottomOf="@id/btn9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRes"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butRes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toBottomOf="@id/btnClear" />


</androidx.constraintlayout.widget.ConstraintLayout>