<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/style_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_theme_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioButtons"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue_theme" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_theme" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/but_back"
        style="@style/style_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioButtons" />

</androidx.constraintlayout.widget.ConstraintLayout>